# scorm-codec

./: .gitignore  AUTOMATED_SETUP.md  README.md  SETUP.md  SETUP_FLOW.md  config.php  custom-php.ini  flake.nix  local-php.ini  mime.types  nginx.conf  result  start-php-fpm.sh  test.php  unzip.hs
scorm/: LICENSE  moodle  scorm.cabal
scorm/app/: Main.hs
scorm/src/: Scorm.hs
scorm/test/: Spec.hs
static-files/: README.md  hello.html  index.html
static-files/css/: example.css
static-files/js/: example.js
