cabal-version:      3.0
name:               scorm
version:            0.1.0.0
synopsis:           A simple Haskell library
description:        A basic Haskell library example
license:            BSD-3-Clause
license-file:       LICENSE
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple

library
  exposed-modules:    Scorm
  build-depends:      base >= 4.14 && < 5
                     , zip-archive >= 0.4
                     , xml-conduit >= 1.9
                     , bytestring >= 0.11
                     , text >= 1.2
                     , containers >= 0.6
                     , filepath >= 1.4
                     , directory >= 1.3
                     , aeson >= 2.0
                     , aeson-pretty >= 0.8
                     , xml-types >= 0.3
  hs-source-dirs:     src
  default-language:   Haskell2010

executable scorm-codec
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base >= 4.14 && < 5
                     , scorm
                     , bytestring >= 0.11
                     , text >= 1.2
                     , aeson >= 2.0
                     , aeson-pretty >= 0.8
                     , base64-bytestring >= 1.2
  default-language:   Haskell2010

test-suite scorm-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:      base >= 4.14 && < 5
                     , scorm
                     , bytestring >= 0.11
                     , text >= 1.2
                     , filepath >= 1.4
                     , directory >= 1.3
                     , zip-archive >= 0.4
                     , temporary >= 1.3
                     , process >= 1.6
  hs-source-dirs:     test
  build-tool-depends: scorm:scorm-codec
  default-language:   Haskell2010

